Fixes top cut off

--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,10 @@ body > .grid {
   height: 100%;
 }
 
+.main-form {
+  margin-top: 160px !important;
+}
+
 .image {
   margin-top: -100px !important;
 }
